--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Даниил Троянов - CV</title>
+
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+     <!--Import materialize.css-->
+     <link type="text/css" rel="stylesheet" href="./css/materialize.min.css"  media="screen,projection"/>
+
 </head>
 <body>
     
+    <!--JavaScript at end of body for optimized loading-->
+    <script src="./js/materialize.min.js"></script>
 </body>
 </html>
